--- a/.github/workflows/master_testappgithubactions.yml
+++ b/.github/workflows/master_testappgithubactions.yml
@@ -38,23 +38,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_6B957782053945DA94C1BE01EC37BD19 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_D8F1081AA03347B1A074F747E1BAB4EC }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_C035185F0C2D4468B045D256AD182879 }}
-
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
@@ -62,4 +52,4 @@ jobs:
           app-name: 'TestAppGitHubActions'
           slot-name: 'Production'
           package: .
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_58C480FE1613497ABDC61169909FD0D1 }}
